feat: implement answer endpoint
